--- a/index.html
+++ b/index.html
@@ -7,3 +7,5 @@
 <img src="PiscinaNeymar.jpg">
 <h1>MEJORES TITULOS</h1>
 <h3> tiene un total de 30,Neymar lo ha ganado todo tanto en el Santos como en Fútbol Club Barcelona y PSG. Tiene 30 títulos: a falta de un Mundial y una Copa América </h3>
+<h4>Es uno de mis jugadores favoritos gracias a su magia con el balon y sus enamoradizos regates</h4>
+
